--- a/olivelearning.html
+++ b/olivelearning.html
@@ -6,21 +6,19 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/olivelearning.css" rel="stylesheet">
     <link href="js/bootstrap.js" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"; rel="stylesheet">
 </head>
 
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-lg-4 callus">
           <h6>Call us Today! +44 2032 3532 133 | info@olivemedia.co</h6>
         </div>
       </div>
-    </div>               
-  </nav> 
-
-
-<div class="first_content">
+    </div>   -->  
+    <div class="first_content">
     <div class="container">              
       <div class="row">                
         <div class="col-lg-2 logo">
@@ -39,12 +37,36 @@
       </div>
     </div>
   </div> 
+           
+  </nav> 
 
-  <div class="second_content">
+
+
+ <div class="second_content">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 video">
-          <img src="images/imagee.png">
+        <div class="col-lg-8">
+           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> 
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+  
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active"> <img src="images/imagee.png" alt="banner" width="1920" height="553" class="img-responsive center-block">      
+    </div>
+    <div class="item"> <img src="images/imagee1.png" alt="banner" width="1920" height="553" class="img-responsive center-block">     
+    </div>
+    <div class="item"> <img src="images/imagee2.png" alt="banner" width="1920" height="553" class="img-responsive center-block">      
+    </div>
+  </div>
+  
+  <!-- Controls --> 
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"><span class="material-icons">keyboard_arrow_left</span></a><a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="material-icons">keyboard_arrow_right</span></a> 
+</div> 
         </div>
         <div class="col-lg-4 video-description">
           <h2>Ukata Asbestos Awareness Training course online</h2>
@@ -144,7 +166,131 @@
       </div>
     </div>
   </div>
+
+  <div class="sixth-content">
+      <div class="container">
+        <div class="row">
+          <h3>Trusted UKATA Certification </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>Olive Learning's online Asbestos Awareness course is certified by UKATA. On successfully completing the course, the UKATA certificate is automatically generated and emailed straight to you.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img1.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+          <h3>Engaging Online Video Course </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>All of our courses are delivered using presenters and motion graphics that are easier to understand and far more engaging. Our asbestos awareness course requires little reading, it’s a short video course that will help you understand the risks in a more realistic manner.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img2.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+          <h3>Expert Teaching Content  </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>The asbestos awareness course has been created by top training experts from the UK. It is in line with all 2015 regulations and valid for one year. Watch and learn from some of most the most experience learning and development professionals in the country.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img3.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+          <h3>Learning on the go </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>Take the course from your computer, tablet, or mobile device. Use your laptop browser or choose from one of our free apps for iPhone, iPad, and Android devices. You can switch devices without ever losing your place.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img4.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+          <h3>A trusted source for online learning </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>We provide training to more than 200,000+ employees across the UK and Ireland. Some of the largest companies such as Tesco, BAM, Mercury, Sony and Pepsico are using our courses today.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img5.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+          <h3>Training for individuals or businesses   </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>We cater for individuals that want to get certified, for medium sized businesses or for large organisations through a choice of cost-effective packages.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img6.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+          <h3>24/7 Support   </h3>
+          <div class="col-lg-8 about-olive">            
+            <p>If you or any of your staff are having any difficulties with the course we have a support line available to chat 24/7. Our team will handle your queries quickly if you’ve lost your password or if you are stuck.</p>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/img7.png" width="368" height="219" alt="image" class="img-responsive">
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <div class="seventh-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="col-sm-2 icons">
+            <a href="#"><span class="material-icons">get_app</span></a>
+          </div>
+          <div class="col-sm-10">
+            <h3>UKATA certificate</h3>
+            <p>Your UKATA certificate is automatically generated and emailed straight to you.</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="col-sm-2 icons">
+            <a href="#"><span class="material-icons">thumb_up</span></a>
+          </div>
+          <div class="col-sm-10">
+            <h3>  Immediate start</h3>
+            <p>Purchase your licence and you’ll receive your log-in details within seconds.</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="col-sm-2 icons">
+            <a href="#"><span class="material-icons">videocam</span></a>
+          </div>
+          <div class="col-sm-10">
+            <h3>  Video Presentation</h3>
+            <p>Interactive and dynamic video presentation from a professional presenter to help clarify terms and concepts.</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="col-sm-2 icons">
+            <a href="#"><span class="material-icons">group_work</span></a>
+          </div>
+          <div class="col-sm-10">
+            <h3>Discounts available</h3>
+            <p>We have significant discounts available if you’re purchasing multiple licences.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="eighth-content">
+    <div class="container">
+      <div class="row">
+          <div style="padding:20px; color:#fff;" class="col-lg-4">
+            <h2>OLIVE LEARNING</h2>            
+          </div>
+          <div class="col-lg-4">
+            <h4>United Kingdom :<br><br>
+27 Mara House, Queen Elizabeth Olympic Park, Stratford, E201GA, London Tel: +44 20 3579 7542</h4>
+          </div>
+          <div class="col-lg-4">
+            <h4>Ireland :<br><br>
+Red Cow Business Park, Clondalkin, Dublin 22, Ireland Tel: +353 1 4111011</h4>
+          </div>
+      </div>
+    </div>
+  </div>
    
+  
+ 
+   <footer>
+    <div class="container">
+Copyright 2015 Olive Learning | All Rights Reserved
+</div>
+   </footer>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -156,3 +302,49 @@
 
 
 </html>
+
+<style type="text/css">
+@media(min-width:768px) {
+    .carousel-control{
+        line-height: 400px;
+    }}
+
+    @media(max-width:768px) and (min-width: 400px) {
+      .carousel-control{
+        line-height: 200px;
+      }
+    .carousel-control .material-icons{
+  background-color: #000;
+  color: #fff;
+  border-radius: 30px;
+  font-size: 20px;
+  padding: 5px;
+}}
+
+@media(max-width: 400px) and (min-width: 190px) {
+      .carousel-control{
+        line-height: 120px;
+      }
+    .carousel-control .material-icons{
+  background-color: #000;
+  color: #fff;
+  border-radius: 30px;
+  font-size: 20px;
+  padding: 5px;
+}
+  }
+.seventh-content{
+  background-color: #eae9e9;
+  padding: 20px 0px;
+}
+.material-icons{
+  background-color: #000;
+  color: #fff;
+  border-radius: 30px;
+  font-size: 50px;
+  padding: 5px;
+}
+
+
+
+</style>
