--- a/olivelearning.html
+++ b/olivelearning.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>  
-    <title>OLive Learning</title>   
+    <title>Olive Learning</title>   
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/purchase.css" rel="stylesheet">
     <link href="css/olivelearning.css" rel="stylesheet">
@@ -29,12 +29,12 @@
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">     
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="javascript:void(0)">Home</a></li>
-                <li><a href="javascript:void(0)">Info</a></li>
-                <li><a href="javascript:void(0)">Blog</a></li>
-                <li><a href="javascript:void(0)">FAQ</a></li>
-                <li><a href="javascript:void(0)">Buy Now</a></li>
-                <li><a href="javascript:void(0)">Contact Us</a></li>        
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Info</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="purchase.html">Buy Now</a></li>
+                <li><a href="contact.html">Contact Us</a></li>        
               </ul>
             </div>
           </div>
@@ -288,46 +288,3 @@
 </html>
 
 
-
-<style type="text/css">
-@media(min-width:768px) {
-    .carousel-control{
-        line-height: 400px;
-    }}
-
-    @media(max-width:768px) and (min-width: 400px) {
-      .carousel-control{
-        line-height: 200px;
-      }
-    .carousel-control .material-icons{
-  background-color: #000;
-  color: #fff;
-  border-radius: 30px;
-  font-size: 20px;
-  padding: 5px;
-}}
-
-@media(max-width: 400px) and (min-width: 190px) {
-      .carousel-control{
-        line-height: 120px;
-      }
-    .carousel-control .material-icons{
-  background-color: #000;
-  color: #fff;
-  border-radius: 30px;
-  font-size: 20px;
-  padding: 5px;
-}
-  }
-.seventh-content{
-  background-color: #eae9e9;
-  padding: 20px 0px;
-}
-.material-icons{
-  background-color: #000;
-  color: #fff;
-  border-radius: 30px;
-  font-size: 50px;
-  padding: 5px;
-}
-</style>
