--- a/purchase.html
+++ b/purchase.html
@@ -17,10 +17,8 @@
 <body>
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="first-content">
       <div class="container">
         <div class="navbar navbar-default">
-          <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
                 <span class="icon-bar"></span>
@@ -39,26 +37,25 @@
                 <li><a href="contact.html">Contact Us</a></li>               
               </ul>
             </div>
-          </div>
         </div>
       </div>
-    </div>
   </nav>
   
-  <div class="wrapper">
-    <div class="purchase">
+
+    <div class="top-bar">
       <div class="container">
         <div class="row">
-        <div class="col-lg-6 purchase-course">
+        <div class="col-lg-6 topic">
           PURCHASE A COURSE
         </div>
-        <div style="text-align:right;"class="col-lg-6">
+        <div style="text-align:right;"class="col-lg-6 purchase">
           Home/Purchase a course      
         </div>
         </div>
       </div>
     </div>
 
+  <div class="wrapper">
     <form>
       <div class="row row-centered">
         <div class="col-md-6 col-md-offset-3">
