--- a/contact.html
+++ b/contact.html
@@ -18,48 +18,45 @@
 <body>
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="first-content">
-      <div class="container">
-        <div class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="javascript:void(0)"><h3>OLIVE LEARNING</h3></a>
-            </div>
-            <div class="navbar-collapse collapse navbar-responsive-collapse">      
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="olivelearning.html">Home</a></li>
-                <li><a href="#">Info</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="purchase.html">Buy Now</a></li>
-                <li><a href="contact.html">Contact Us</a></li>               
-              </ul>
-            </div>
-          </div>
+    <div class="container">
+      <div class="navbar navbar-default">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="javascript:void(0)"><h3>OLIVE LEARNING</h3></a>
+        </div>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">      
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="olivelearning.html">Home</a></li>
+            <li><a href="#">Info</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="purchase.html">Buy Now</a></li>
+            <li><a href="contact.html">Contact Us</a></li>               
+          </ul>
         </div>
       </div>
     </div>
   </nav>
 
-  <div class="wrapper">
-    <div class="purchase">
-      <div class="container">
-        <div class="row">
-        <div class="col-lg-6 purchase-course">
+
+  <div class="top-bar">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 topic">
           Contact
         </div>
-        <div style="text-align:right;"class="col-lg-6">
+        <div style="text-align:right;"class="col-lg-6 contact">
           Home/Contact     
-        </div>
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="wrapper">
     <div class="container info">
       <div class="row">
         <div class="col-sm-8 information">
@@ -99,7 +96,7 @@
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea name="your-message" cols="50" rows="9" aria-invalid="false"></textarea>
+              <textarea name="your-message" cols="48" rows="9" aria-invalid="false" class="form-control"></textarea>
             </div>
             <a href="#" class="btn btn-raised btn-danger send-message">SEND</a>
           </form>
