--- a/olivelearning.html
+++ b/olivelearning.html
@@ -15,29 +15,25 @@
 <body>
  
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="first-content">
-      <div class="container">
-        <div class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="javascript:void(0)"><h3>OLIVE LEARNING</h3></a>
-            </div>
-            <div class="navbar-collapse collapse navbar-responsive-collapse">     
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Info</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="purchase.html">Buy Now</a></li>
-                <li><a href="contact.html">Contact Us</a></li>        
-              </ul>
-            </div>
-          </div>
+    <div class="container">
+      <div class="navbar navbar-default">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="javascript:void(0)"><h3>OLIVE LEARNING</h3></a>
+        </div>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">     
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Info</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="purchase.html">Buy Now</a></li>
+            <li><a href="contact.html">Contact Us</a></li>        
+          </ul>
         </div>
       </div>
     </div>
@@ -48,18 +44,18 @@
       <div class="row">
         <div class="col-lg-8">
           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> 
-              <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-              </ol> 
-              <div class="carousel-inner">
-                <div class="item active"> <img src="images/imagee.png" alt="banner" width="1920" height="553" class="img-responsive center-block"></div>
-                <div class="item"> <img src="images/imagee1.png" alt="banner" width="1920" height="553" class="img-responsive center-block"></div>
-                <div class="item"> <img src="images/imagee2.png" alt="banner" width="1920" height="553" class="img-responsive center-block"></div>
-              </div>
-              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"><span class="material-icons">keyboard_arrow_left</span></a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="material-icons">keyboard_arrow_right</span></a> 
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol> 
+            <div class="carousel-inner">
+              <div class="item active"> <img src="images/imagee.png" alt="banner" width="1920" height="553" class="img-responsive center-block"></div>
+              <div class="item"> <img src="images/imagee1.png" alt="banner" width="1920" height="553" class="img-responsive center-block"></div>
+              <div class="item"> <img src="images/imagee2.png" alt="banner" width="1920" height="553" class="img-responsive center-block"></div>
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"><span class="material-icons">keyboard_arrow_left</span></a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next"> <span class="material-icons">keyboard_arrow_right</span></a> 
           </div> 
         </div>
         <div class="col-lg-4 video-description">
@@ -72,7 +68,7 @@
               <li>Download certificate on completion</li>
               <li>UK's preferred eLearning supplier</li>
             </ul>
-            <a href="#" class="btn btn-raised btn-danger buy">BUY NOW</a>
+            <a href="purchase.html" class="btn btn-raised btn-danger buy">BUY NOW</a>
         </div>
       </div>
     </div>
@@ -129,7 +125,7 @@
               <tr><td>Includes all taxes & charges</td></tr>
               <tr><td>Great Value</td></tr>
               <tr><td>Immediate start</td></tr>
-              <tr><td style="background-color: #eae9e9;"><a href="#" class="btn btn-raised btn-danger buy">BUY NOW</a></td></tr>
+              <tr><td style="background-color: #eae9e9;"><a href="purchase.html" class="btn btn-raised btn-danger buy">BUY NOW</a></td></tr>
             </table>
           </a>
         </div>
@@ -141,7 +137,7 @@
               <tr><td>Includes all taxes & charges</td></tr>
               <tr><td>25 % discount</td></tr>
               <tr><td>Immediate start</td></tr>
-              <tr><td style="background-color: #eae9e9;"><a href="#" class="btn btn-raised btn-danger buy">BUY NOW</a></td></tr>
+              <tr><td style="background-color: #eae9e9;"><a href="purchase.html" class="btn btn-raised btn-danger buy">BUY NOW</a></td></tr>
             </table>
           </a>
         </div>
@@ -153,7 +149,7 @@
               <tr><td>Includes all taxes & charges</td></tr>
               <tr><td>Almost 50 % discount</td></tr>
               <tr><td>Immediate start</td></tr>
-              <tr><td style="background-color: #eae9e9;"><a href="#" class="btn btn-raised btn-danger buy">BUY NOW</a></td></tr>
+              <tr><td style="background-color: #eae9e9;"><a href="purchase.html" class="btn btn-raised btn-danger buy">BUY NOW</a></td></tr>
             </table>
           </a>
         </div>
